syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.firelib";

package com.firelib;

import "domain.proto";

service StratService {
  rpc GetStrats(Empty) returns (stream StratDescription) {}
  rpc GetLevels(Empty) returns (stream Levels) {}
  rpc PriceSubscribe(HistoryRequest) returns (stream OhlcTO) {}
  rpc IntradaySubscribe(Empty) returns (stream OhlcTO) {}
}