syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.firelib";

package com.firelib;

message Empty{}

message HistoryRequest{
    string ticker = 1;
    OhlcPeriod period = 2;
    int32 depth = 3;
}

enum OhlcPeriod{
    Day = 0;
    Week = 1;
}

message StratDescription{
    Chart benchmark = 1;
    string description = 2;
    string name = 3;
    repeated Position openPositions = 4;
    repeated Position closedPositions = 5;
    repeated Chart charts = 6;
}

message Position{
    string ticker = 1;
    int64 position  = 2;
    double openPrice = 3;
    double pnl = 4;
    int64 timestamp = 5;
    int64 closeTimestamp = 6;
    double closePrice = 7;
    BuySell buySell = 8;
}

message Chart{
    repeated DatePoint points = 1;
    string name = 2;
    enum ChartType {
        Bar = 0;
        Line = 1;
    }
    ChartType chartType = 3;
}

message DatePoint{
    int64 timestamp = 1;
    double value = 2;
    string label = 3;
}

enum BuySell{
    Buy = 0;
    Sell = 1;
}

message Level{
    DatePoint level = 1;
    OhlcPeriod levelType = 2;

}

message Levels{
    string ticker = 1;
    repeated Level levels = 2;
}

message OhlcTO{
    double open = 1;
    double high = 2;
    double low = 3;
    double close = 4;
    string ticker = 5;
    int64 timestamp = 6;
    OhlcPeriod period = 7;
}